(coq.theory
 (name VSTArrayProgs)
 (package coq-vst-array-progs)
 (synopsis "A bunch of array-related C programs verified in VST with Coq"))

(rule
 (target binary_search.v)
 (deps ../src/binary_search.c)
 (action (run clightgen -o %{target} -normalize %{deps})))

(rule
 (target binary_search_range.v)
 (deps ../src/binary_search_range.c)
 (action (run clightgen -o %{target} -normalize %{deps})))

(rule
 (target binary_search_shift.v)
 (deps ../src/binary_search_shift.c)
 (action (run clightgen -o %{target} -normalize %{deps})))

(rule
 (target reverse_array.v)
 (deps ../src/reverse_array.c)
 (action (run clightgen -o %{target} -normalize %{deps})))
